# CPURenderer

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/include/: film.h  frame.h  material.h  model.h  ray.h  rgb.h  scene.h  shape.h  sphere.h  thread_pool.h
source/include/accelerate/: bounds.h  bvh.h  scene_bvh.h
source/include/camera/: camera.h  film.h  ray.h
source/include/material/: conductor_material.h  dielectric_material.h  diffuse_material.h  ground_material.h  material.h  specular_material.h
source/include/renderer/: base_renderer.h  debug_renderer.h  normal_renderer.h  path_tracing_renderer.h  simple_rt_renderer.h
source/include/sample/: spherical.h
source/include/shape/: model.h  plane.h  scene.h  shape.h  sphere.h  triangle.h
source/include/thread/: spin_lock.h  thread_pool.h
source/include/util/: complex.h  debug_marco.h  profile.h  progress.h  rgb.h  rng.h
source/src/: camera.cpp  compare.cpp  film.cpp  frame.cpp  main.cpp  model.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  thread_pool.cpp  triangle.cpp
source/src/accelerate/: bounds.cpp  bvh.cpp  scene_bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/material/: conductor_material.cpp  dielectric_material.cpp  diffuse_material.cpp  ground_material.cpp  specular_material.cpp
source/src/renderer/: base_renderer.cpp  debug_renderer.cpp  normal_renderer.cpp  path_tracing_renderer.cpp  simple_rt_renderer.cpp
source/src/shape/: material.cpp  model.cpp  plane.cpp  scene.cpp  sphere.cpp  triangle.cpp
source/src/util/: frame.cpp  (+2 more)
(+1 files in other folders)
